--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Will Ruman - Software Developer
 #email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >- 
   Portfolio site of Will Ruman, a software developer based out of
   Kansas City, MO
 baseurl: "" # the subpath of your site, e.g. /blog
